--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -13,8 +13,8 @@
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
 $primary   : #1976D2;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+$secondary : #ffc0ad;
+$accent    : #9656a1;
 
 $dark      : #1D1D1D;
 $dark-page : #121212;
@@ -23,3 +23,17 @@ $positive  : #21BA45;
 $negative  : #C10015;
 $info      : #31CCEC;
 $warning   : #F2C037;
+
+$background: #271c19;
+$background-2: #55423d;
+$headline : #fffffe;
+$paragraph: #fff3ec;
+$burront: #ffc0ad;
+$button-text: #271c19;
+$stroke: #140d0b;
+$main: #fff3ec;
+$highlight: #e78fb3;
+
+$text-color-1: #ffc0ad;
+
+$drawer-bg-color: #ffc0ad;
