--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -24,8 +24,6 @@ $negative  : #C10015;
 $info      : #31CCEC;
 $warning   : #F2C037;
 
-$background: #271c19;
-$background-2: #55423d;
 $headline : #fffffe;
 $paragraph: #fff3ec;
 $burront: #ffc0ad;
@@ -34,6 +32,8 @@ $stroke: #140d0b;
 $main: #fff3ec;
 $highlight: #e78fb3;
 
-$text-color-1: #ffc0ad;
-
-$drawer-bg-color: #ffc0ad;
+$ds-color-light: #fff3ec;
+$ds-color-antracit: #271c19;
+$ds-color-taupe: #55423d;
+$ds-color-salmon: #ffc0ad;
+$ds-color-dark-grey: #140d0b;
