--- a/src/css/usages/usage.player.scss
+++ b/src/css/usages/usage.player.scss
@@ -1,1 +1,4 @@
-$ds-player-bg-color: $ds-color-taupe;
+$ds-player-bg-color: $ds-color-swamp;
+$ds-player-color: $ds-color-dark-white;
+$ds-player-thumb-color: $ds-color-saffron-mango;
+$ds-player-thumb-border-color: $ds-color-bon-jour;
