--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -3,9 +3,13 @@
 @import './usages/usage.content.scss';
 @import './usages/usage.player.scss';
 @import './usages/usage.drawer.scss';
+@import './usages/usage.button.scss';
+@import './usages/usage.range.scss';
 
 @import './components/component.header.scss';
 @import './components/component.title.scss';
 @import './components/component.content.scss';
 @import './components/component.player.scss';
 @import './components/component.drawer.scss';
+@import './components/component.button.scss';
+@import './components/component.range.scss';
