--- a/src/css/components/component.player.scss
+++ b/src/css/components/component.player.scss
@@ -1,3 +1,32 @@
 .ds-player {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   background-color: $ds-player-bg-color;
+
+  &__progress-bar {
+    padding: 0 0 1rem 0;
+    display: flex;
+  }
+
+  &__controls {
+    display: flex;
+    justify-content: flex-start;
+    column-gap: 0.75rem;
+    padding: 0 0.5rem 1rem 1rem;
+
+    &-volume {
+      width: 10rem;
+      display: flex;
+      align-items: center;
+    }
+  }
+
+  &__current-track {
+    color: $ds-player-color;
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    padding: 0 0.5rem;
+  }
 }
