--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -5,6 +5,7 @@
 @import './usages/usage.drawer.scss';
 @import './usages/usage.button.scss';
 @import './usages/usage.range.scss';
+@import './usages/usage.scrollbar.scss';
 
 @import './components/component.header.scss';
 @import './components/component.title.scss';
@@ -13,3 +14,4 @@
 @import './components/component.drawer.scss';
 @import './components/component.button.scss';
 @import './components/component.range.scss';
+@import './components/component.scrollbar.scss';
