progress bar, buttons styles, footer layout

--- a/src/styles/tokens.scss
+++ b/src/styles/tokens.scss
@@ -1,6 +1,15 @@
 $background: $dark;
 $background-base: $grey;
 $background-light: $light;
+$background-progress-bar: $grey2;
+$background-progress-bar-hover: $light;
 
 $font-color-dark: $dark;
 $font-color-light: $light;
+$font-color-accent: $mountain-meadow;
+$font-color-grey: $grey3;
+
+$button-background-secondary: $grey3;
+
+$now-playing-title: $font-size-m;
+$now-playing-subtitle: $font-size-s;
