--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,3 +1,9 @@
 $dark: #000;
 $grey: #121212;
+$grey2: #4d4d4d;
+$grey3: #b3b3b3;
 $light: #fff;
+$mountain-meadow: #1DB954;
+
+$font-size-s: 0.6875rem; // 11px
+$font-size-m: 0.875rem; // 14px
