LoawDB and IPCMain implementration

--- a/src/styles/tokens.scss
+++ b/src/styles/tokens.scss
@@ -9,6 +9,7 @@ $font-color-light: $light;
 $font-color-accent: $mountain-meadow;
 $font-color-grey: $grey3;
 
+$button-background-primary: $mountain-meadow;
 $button-background-secondary: $grey3;
 
 $now-playing-title: $font-size-m;
