styling lists, play pause, id3tag

--- a/src/styles/tokens.scss
+++ b/src/styles/tokens.scss
@@ -14,3 +14,13 @@ $button-background-secondary: $grey3;
 
 $now-playing-title: $font-size-m;
 $now-playing-subtitle: $font-size-s;
+
+$playlists-default-margin: $spacing-m;
+$playlists-color-selected: $mountain-meadow;
+
+$status-indicator-closed-color: $grey3;
+$status-indicator-opened-color: $mountain-meadow;
+
+$files-list-item-hover-bg-color: $grey2;
+$files-list-item-play-button-bg: $light;
+$files-list-item-playing-color: $mountain-meadow;
