play track from frolder list and some other improvment

--- a/src/styles/tokens.scss
+++ b/src/styles/tokens.scss
@@ -17,6 +17,9 @@ $now-playing-subtitle: $font-size-s;
 
 $playlists-default-margin: $spacing-m;
 $playlists-color-selected: $mountain-meadow;
+$playlists-bg-color-play: $grey2;
+$playlists-button-color-play: $light;
+$playlists-button-color-playing: $mountain-meadow;
 
 $status-indicator-closed-color: $grey3;
 $status-indicator-opened-color: $mountain-meadow;
