--- a/src/styles/tokens.scss
+++ b/src/styles/tokens.scss
@@ -27,3 +27,5 @@ $status-indicator-opened-color: $mountain-meadow;
 $files-list-item-hover-bg-color: $grey2;
 $files-list-item-play-button-bg: $light;
 $files-list-item-playing-color: $mountain-meadow;
+
+$scrollbar-bg-color: $grey2;
