styling add folder button

--- a/src/styles/tokens.scss
+++ b/src/styles/tokens.scss
@@ -11,6 +11,7 @@ $font-color-grey: $grey3;
 
 $button-background-primary: $mountain-meadow;
 $button-background-secondary: $grey3;
+$button-background-tertiary: $grey2;
 
 $now-playing-title: $font-size-m;
 $now-playing-subtitle: $font-size-s;
